<resources>
    <string name="app_name">CV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_to_home">Add to home</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E_Mail</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="e_g_testuser">e.g testUser</string>
    <string name="password_hint">********</string>
    <string name="phone_hint">(641) 810 2345</string>
    <string name="email_hint">abc@example.com</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_adashboard">Dashboard</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="gmail">gmail</string>
    <string name="whatsapp">whatsapp</string>
    <string name="add_to_work">Add to Work</string>
    <string name="company_logo">Company Logo</string>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="my_contacts">My Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="role">Role</string>
    <string name="company">Company</string>
    <string name="login">Login</string>
    <string name="add_to_project">Add To Project</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_image">Choose Image</string>
</resources>