<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".AddWorkExperienceActivity">



        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/company_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/role_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/job_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/role"
            android:inputType="text"
            android:minHeight="48dp" />
        <TextView
            android:id="@+id/duration_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/job_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/duration"
            android:inputType="text"
            android:minHeight="48dp" />
        <TextView
            android:id="@+id/location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/job_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:minHeight="48dp" />



        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/cancel"
            android:onClick="cancel"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/submit"
            android:onClick="submit"
            app:backgroundTint="#03A9F4"/>
    </LinearLayout>
